Reformat bibliography per ClusterWorld guidelines and Gebur input.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -1,93 +1,95 @@
 @MISC
 {
     Authd2002, 
-    AUTHOR = "Authd home page",
-    TITLE  = "http://www.theether.org/authd/",
+    AUTHOR    = "{Chun, B.}",
+    TITLE     = "``authd,'' http://www.theether.org/authd/",
 }
 
 @MISC
 {
     BlueGene2002, 
-    AUTHOR = "LLNL BlueGene/L home page",
-    TITLE  = "http://www.llnl.gov/asci/platforms/bluegenel",
+    AUTHOR    = "Lawrence Livermore National Laborary (2003)",
+    TITLE     = "{``Blue/GeneL,'' http://www.llnl.gov/asci/platforms/bluegenel}",
 }
 
 @MISC
 {
     DPCS2002, 
-    AUTHOR = "DPCS overview",
-    TITLE  = "http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html",
+    AUTHOR    = "Lawrence Livermore National Laborary (2001)",
+    TITLE     = "{``Distributed Production Control System (DPCS).'' 
+                 http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html}",
 }
 
 @MISC
 {
     Etnus2002, 
-    AUTHOR = "Etnus home page",
-    TITLE  = "http://www.etnus.com",
+    AUTHOR    = "Etnus home page",
+    TITLE     = "http://www.etnus.com",
 }
 
 @MISC
 {
     Globus2002, 
-    AUTHOR = "Globus home page",
-    TITLE  = "http://www.globus.org",
+    AUTHOR    = "The Globus Project (2003)",
+    TITLE     = "http://www.globus.org",
 }
 
 @MISC
 {
     GPL2002, 
-    AUTHOR = "The GNU Licenses",
-    TITLE  = "http://www.gnu.org/licenses/licenses.html",
+    AUTHOR    = "The GNU Project (2003)",
+    TITLE     = "http://www.gnu.org/licenses/licenses.html",
 }
 
 @CONFERENCE
 {
     Jackson2001, 
-    AUTHOR = "David Jackson and Quinn Snell and Mark Clement",
-    TITLE  = "Core Algorithms of the Maui Scheduler",
+    AUTHOR    = "{Jackson, D.} and {Q. Snell} and {M. Clement}",
+    TITLE     = "{``Core Algorithms of the Maui Scheduler''}",
     BOOKTITLE = "Job Scheduling Stategies for Parallel Processing",
-    YEAR      = 2002,
-    VOLUME = "LLCS 2221",
-    PUBLISHER = "Springer Verlag",
-    PAGES = "87-102",
-    EDITOR = "Dror Feitelson and Larry Rudolph",
+    ADDRESS   = "7th International Workshop, JSSPP 2001, 
+                 Cambridge, MA, June 16, 2001. 
+                 Edited by D.G. Feitelson, L. Rudolph and U. Schwiegelshohn,
+                 (Springer, New York; Berlin, 2001)
+                 LLCS vol. 2221,
+                 87-102",
 }
 
-@TECHREPORT
+@MISC
 {
     Jette2002, 
-    AUTHOR = "Moe Jette and others",
-    TITLE  = "Survey of Batch/Resource Management-Related System Software",
-    INSTITUTION = "LLNL",
-    YEAR        = 2002,
+    AUTHOR      = "{Jette, M.} and others",
+    TITLE       = "{Survey of Batch/Resource Management Related System Software}",
+    NOTE        = "Lawrence Livermore National Laborary, 2002 (unpublished)",
 }
 
 @MISC
 {
     LL2002, 
-    AUTHOR = "LoadLeveler documentation",
-    TITLE  = "http://www-1.ibm.com/servers/eserver/pseries/library/sp\_books/loadleveler.html"
+    AUTHOR = "IBM ``LoadLeveler''",
+    TITLE  = "\linebreak http://www-1.ibm.com/servers/eserver/pseries/library/sp\_books/loadleveler.html"
 }
 
 @MISC
 {
     Maui2002, 
-    AUTHOR = "Maui scheduler repository",
+    AUTHOR = "Maui Scheduler",
     TITLE  = "http://mauischeduler.sourceforge.net/",
 }
 
 @MISC
 {
     Quadrics2002, 
-    AUTHOR = "Quadrics Resource Management System",
-    TITLE  = "http://www.quadrics.com/",
+    AUTHOR = "Quadrics Ltd.",
+    TITLE  = "{``Resource Management System,'' http://www.quadrics.com/}",
 }
 
 @CONFERENCE
 {
     STORM2001, 
-    AUTHOR = "Eitan Frachtenberg and Fabrizio Petrini and others",
-    TITLE  = "STORM: Lightning-Fast Resource Management",
-    BOOKTITLE = "Proceedings of SuperComputing",
-    YEAR      = 2002,
+    AUTHOR    = "{Frachtenberg, E.} and others",
+    TITLE     = "{``STORM: Lightning-Fast Resource Management''}",
+    BOOKTITLE = "Proceedings of SuperComputing 2002",
+    ADDRESS   = "(Baltimore, MD, November 2002)",
+    NOTE      = "Available from http://www.cs.huji.ac.il/~etcs/papers/sc02.pdf",
 }
