Fix "~" in http references (use $\sim$ construct as needed to print it).

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -91,5 +91,6 @@
     TITLE     = "{``STORM: Lightning-Fast Resource Management''}",
     BOOKTITLE = "Proceedings of SuperComputing 2002",
     ADDRESS   = "(Baltimore, MD, November 2002)",
-    NOTE      = "Available from http://www.cs.huji.ac.il/~etcs/papers/sc02.pdf",
+    NOTE      = "Available from 
+                 http://www.cs.huji.ac.il/$\sim$etcs/papers/sc02.pdf",
 }
