Add bibliographic reference for SLURM web site.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -84,6 +84,14 @@
     TITLE  = "{``Resource Management System,'' http://www.quadrics.com/}",
 }
 
+@MISC
+{
+    SLURM2003, 
+    AUTHOR    = "Lawrence Livermore National Laborary (2003)",
+    TITLE     = "{``SLURM Simple Linux Utility for Resource Management,'' 
+                  http://www.llnl.gov/linux/slurm/}",
+}
+
 @CONFERENCE
 {
     STORM2001, 
