--- a/trunk/doc/man/man3/slurm_free_job_info_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_info_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "February 2003" "Morris Jette" "Slurm job information reporting functions"
+.TH "Slurm API" "3" "April 2003" "Morris Jette" "Slurm job information reporting functions"
 .SH "NAME"
 slurm_free_job_info_msg, slurm_load_jobs, 
 slurm_print_job_info, slurm_print_job_info_msg
@@ -37,7 +37,9 @@ void \fBslurm_print_job_info\fR (
 .br
 	FILE *\fIout_file\fP,
 .br
-	job_info_t *\fIjob_ptr\fP
+	job_info_t *\fIjob_ptr\fP,
+.br
+	int \fIone_linerfP
 .br 
 );
 .LP 
@@ -45,7 +47,9 @@ void \fBslurm_print_job_info_msg\fR (
 .br
 	FILE *\fIout_file\fP,
 .br
-	job_info_msg_t *\fIjob_info_msg_ptr\fP
+	job_info_msg_t *\fIjob_info_msg_ptr\fP,
+.br
+	int \fIone_linerfP
 .br 
 );
 .SH "ARGUMENTS"
@@ -73,6 +77,9 @@ Specifies a process id of some process on the current node.
 \fIjob_ptr\fP
 Specifies a pointer to a single job records from the \fIjob_info_msg_ptr\fP data 
 structure.
+.TP 
+\fIone_liner\fP
+Print one record per line if non-zero.
 .TP 
 \fIout_file\fP
 Specifies the file to print data to.
